[gd_scene load_steps=8 format=3 uid="uid://11k6r04jldh2"]

[ext_resource type="PackedScene" uid="uid://52svw2c82d53" path="res://cenas/Isabela/cenários/Recepção_cenário.tscn" id="1_jfqv7"]
[ext_resource type="PackedScene" uid="uid://bhfeo0dlqq0hs" path="res://cenas/Isabela/personagens/Namorado/namorado_sem_caixa.tscn" id="2_hc6or"]
[ext_resource type="Script" path="res://scripts/Isabela/Pedido_04/namorado_sem_caixa.gd" id="3_ykwr8"]
[ext_resource type="PackedScene" uid="uid://c6dktl4tt3ats" path="res://cenas/Isabela/Pedido_04/2d_layout_pedido_04.tscn" id="4_44ubl"]

[sub_resource type="Animation" id="Animation_3b7gl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.52166, 0, -8.37388)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bhps3"]
resource_name = "chegando"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.52166, 0, -8.37388), Vector3(-1.52166, 0, -2.84898), Vector3(-0.00644994, 0, -1.48067), Vector3(-0.00644994, 0, -1.17101)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.3, 1.6, 2.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.00207694, 0), Vector3(0, 0.594773, 0), Vector3(0, 0.594773, 0), Vector3(0, 0.00253061, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fp6n0"]
_data = {
"RESET": SubResource("Animation_3b7gl"),
"chegando": SubResource("Animation_bhps3")
}

[node name="pedido_04" type="Node3D"]

[node name="cenário completo2" parent="." instance=ExtResource("1_jfqv7")]

[node name="Namorado" parent="." instance=ExtResource("2_hc6or")]
transform = Transform3D(0.149, 0, 0, 0, 0.149, 0, 0, 0, 0.149, -1.52166, 0, -8.37388)
script = ExtResource("3_ykwr8")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Namorado"]
libraries = {
"": SubResource("AnimationLibrary_fp6n0")
}

[node name="Node_pai_pedido_04" parent="." instance=ExtResource("4_44ubl")]

[connection signal="animation_finished" from="Namorado/AnimationPlayer2" to="Namorado" method="_on_animation_player_2_animation_finished"]
[connection signal="animação_andar" from="Node_pai_pedido_04" to="Namorado" method="_on_node_pai_pedido_04_animação_andar"]
